bdr.BDR.scala.error
Compilation error:
BDR:2: error: not found: type string
var x:string="o"
      ^BDR:5: error: not found: value getIndication
  x=getIndication();
    ^BDR:7: error: type mismatch;
 found   : Unit
 required: Boolean
  if(x="R"){
      ^BDR:11: error: type mismatch;
 found   : Unit
 required: Boolean
  else if(x="L"){
           ^BDR:15: error: type mismatch;
 found   : Unit
 required: Boolean
  else if(x="I"){
           ^BDR:20: error: type mismatch;
 found   : Unit
 required: Boolean
  else if(x="A"){
           ^BDR:23: error: type mismatch;
 found   : Unit
 required: Boolean
  else if(x="B"){
           ^BDR:27: error: type mismatch;
 found   : Unit
 required: Boolean
  else if(x="C"){
           ^BDR:32: error: type mismatch;
 found   : Unit
 required: Boolean
  else if(x="Z"){
           ^BDR:35: error: type mismatch;
 found   : Unit
 required: Boolean
  else if(x="Y"){
           ^BDR:39: error: type mismatch;
 found   : Unit
 required: Boolean
  else if(x="X"){
           ^